refactor(components): add titles to components for improved backoffice readability

--- a/store/blocks/desktop/screen/plp.jsonc
+++ b/store/blocks/desktop/screen/plp.jsonc
@@ -1,11 +1,12 @@
 {
   "search-result-layout.desktop": {
     "title": "desktop search",
-    "children": [
-      "gallery-layout-switcher",
-      "flex-layout.row#container__result--order-filter",
-      "search-content#global__search--layout"
-    ],
+    // "children": [
+    //   "gallery-layout-switcher",
+    //   "flex-layout.row#container__result--order-filter",
+    //   "search-content#global__search--layout"
+    // ],
+    "children": ["flex-layout.row#desktop__plp"],
     "props": {
       "preventRouteChange": true
     }
