--- a/store/blocks/global/components/login/login.jsonc
+++ b/store/blocks/global/components/login/login.jsonc
@@ -1,5 +1,6 @@
 {
   "login#header-desktop": {
+    "title": "global login",
     "props": {
       "optionsTitle": "LOG IN",
       "emailAndPasswordTitle": "LOG IN",
