--- a/store/blocks/phone/components/home/banner/main_slider.jsonc
+++ b/store/blocks/phone/components/home/banner/main_slider.jsonc
@@ -1,36 +1,35 @@
 {
   "flex-layout.row#phone__main-slider": {
-      "children": [
-          "list-context.image-list#phone__container-imagenes"
-      ]
+    "title": "phone main slider",
+    "children": ["list-context.image-list#phone__container-imagenes"]
   },
   "list-context.image-list#phone__container-imagenes": {
-  "title": "list image home banner",
-  "children": ["slider-layout#phone__slider"],
-  "props": {
-    "height": 650,
-    "images": [
-      {
-        "image": "/arquivos/moviel-home.png",
-        "description": "main image of the clock",
-        "width": "100%",
-        "link#id": {
-          "props": {
-            "label": "",
-            "href": "#"
-           }
+    "title": "list image home banner",
+    "children": ["slider-layout#phone__slider"],
+    "props": {
+      "height": 650,
+      "images": [
+        {
+          "image": "/arquivos/moviel-home.png",
+          "description": "main image of the clock",
+          "width": "100%",
+          "link#id": {
+            "props": {
+              "label": "",
+              "href": "#"
+            }
+          }
         }
-      }
-    ]
-  }
-},
-"slider-layout#phone__slider": {
-  "props": {
+      ]
+    }
+  },
+  "slider-layout#phone__slider": {
+    "props": {
       "itemsPerPage": {
-          "desktop": 5,
-          "tablet": 3,
-          "phone": 1
+        "desktop": 5,
+        "tablet": 3,
+        "phone": 1
       }
+    }
   }
-}
 }
