--- a/store/blocks/phone/components/home/header/main_header-info.jsonc
+++ b/store/blocks/phone/components/home/header/main_header-info.jsonc
@@ -1,12 +1,13 @@
 {
   "header-row#main-menu-phone": {
+    "title": "Main Menu Header for Phone",
     "children": ["flex-layout.row#phone-section-one-information"]
   },
 
   "flex-layout.row#phone-section-one-information": {
-    "title": "menu header options section one phone",
+    "title": "Header Menu Options Section One Phone",
     "children": [
-       "drawer",
+      "drawer",
       "flex-layout.col#logo-phone",
       "overlay-trigger#header__overlay--mobile",
       "minicart.v2",
@@ -18,12 +19,19 @@
     }
   },
   "drawer": {
+    "title": "Navigation Drawer for Phone Menu",
     "props": {
       "verticalAlign": "middle",
       "blockClass": ["menu-phone"]
     }
   },
+  "flex-layout.row#container-menu-serach-minicart-login-mobile": {
+    "title": "Container for Menu, Search, Minicart, and Login Mobile",
+
+    "children": []
+  },
   "flex-layout.col#logo-phone": {
+    "title": "Logo Column for Phone Header",
     "props": {
       "verticalAlign": "middle",
       "blockClass": ["logo-phone"]
@@ -31,6 +39,7 @@
     "children": ["logo"]
   },
   "logo": {
+    "title": "Logo Component",
     "props": {
       "title": "Logo",
       "href": "/",
@@ -39,6 +48,7 @@
     }
   },
   "login#header-phone": {
+    "title": "Login Icon for Phone Header",
     "props": {
       "emailAndPasswordTitle": "LOG-IN",
       "accessCodeTitle": "Acess Code LOG-IN",
