--- a/store/blocks/phone/components/home/rich_text/main_rich-text.jsonc
+++ b/store/blocks/phone/components/home/rich_text/main_rich-text.jsonc
@@ -1,5 +1,6 @@
 {
   "rich-text#title-section-one-phone": {
+    "title": "rich text title section one phone",
     "props": {
       "text": "An amazing product PHONE",
       "textAlignment": "LEFT",
@@ -9,6 +10,7 @@
     }
   },
   "rich-text#title-section-two-phone": {
+    "title": "rich text title section two phone",
     "props": {
       "text": "An amazing product PHONE",
       "textAlignment": "LEFT",
@@ -18,6 +20,7 @@
     }
   },
   "rich-text#title-section-there-phone": {
+    "title": "rich text title section there phone",
     "props": {
       "text": "An amazing product PHONE",
       "textAlignment": "LEFT",
