--- a/store/blocks/global/components/plp/plp.jsonc
+++ b/store/blocks/global/components/plp/plp.jsonc
@@ -3,14 +3,15 @@
     "title": "global search",
     "blocks": [
       "search-result-layout",
-      "search-fetch-more",
-      "search-title.v2",
-      "total-products.v2"
+      "search-fetch-more"
+      // "search-title.v2",
+      // "total-products.v2"
     ],
     "props": {
       "context": {
         "skusFilter": "FIRST_AVAILABLE",
-        "simulationBehavior": "default"
+        "simulationBehavior": "default",
+        "maxItemsPerPage": 15
       }
     }
   },
@@ -20,7 +21,8 @@
     "props": {
       "context": {
         "skusFilter": "FIRST_AVAILABLE",
-        "simulationBehavior": "default"
+        "simulationBehavior": "default",
+        "maxItemsPerPage": 15
       }
     }
   },
@@ -30,7 +32,8 @@
     "props": {
       "context": {
         "skusFilter": "FIRST_AVAILABLE",
-        "simulationBehavior": "default"
+        "simulationBehavior": "default",
+        "maxItemsPerPage": 15
       }
     }
   },
@@ -40,7 +43,8 @@
     "props": {
       "context": {
         "skusFilter": "FIRST_AVAILABLE",
-        "simulationBehavior": "default"
+        "simulationBehavior": "default",
+        "maxItemsPerPage": 15
       }
     }
   },
@@ -50,7 +54,8 @@
     "props": {
       "context": {
         "skusFilter": "FIRST_AVAILABLE",
-        "simulationBehavior": "default"
+        "simulationBehavior": "default",
+        "maxItemsPerPage": 15
       }
     }
   },
