--- a/manifest.json
+++ b/manifest.json
@@ -55,7 +55,8 @@
     "vtex.store-link": "0.x",
     "vtex.product-highlights": "2.x",
     "vtex.disclosure-layout": "1.x",
-    "vtex.search": "2.x"
+    "vtex.search": "2.x",
+    "vtex.product-specifications": "1.x"
   },
   "peerDependencies": {
     "vtex.wish-list": "1.x",
