feat(pdp): add initial product detail page with basic responsive views

--- a/store/blocks/global/components/pages/page_collection.jsonc
+++ b/store/blocks/global/components/pages/page_collection.jsonc
@@ -66,7 +66,7 @@
   "gallery#page_collection":{
     "title": "gallery page collection",
     "blocks": [
-      "product-summary.shelf"
+      "product-summary.shelf#global__gallery--summary"
     ]
   }
 }
