--- a/store/blocks/global/components/plp/gallery.jsonc
+++ b/store/blocks/global/components/plp/gallery.jsonc
@@ -6,7 +6,10 @@
         {
           "name": "whole",
           "component": "OneOrTwoLineSummary",
-          "itemsPerRow": 1
+          "itemsPerRow": {
+            "desktop": 3,
+            "mobile": 1
+          }
         },
         {
           "name": "two",
