--- a/manifest.json
+++ b/manifest.json
@@ -56,7 +56,8 @@
     "vtex.product-highlights": "2.x",
     "vtex.disclosure-layout": "1.x",
     "vtex.search": "2.x",
-    "vtex.product-specifications": "1.x"
+    "vtex.product-specifications": "1.x",
+    "vtex.shelf": "1.x"
   },
   "peerDependencies": {
     "vtex.wish-list": "1.x",
