--- a/store/blocks/desktop/screen/plp.jsonc
+++ b/store/blocks/desktop/screen/plp.jsonc
@@ -1,7 +1,9 @@
 {
   "search-result-layout.desktop": {
     "title": "desktop search",
-    "children": ["flex-layout.row#desktop__plp"],
+    "children": [
+       "flex-layout.row#desktop__plp"
+    ],
     "props": {
       "preventRouteChange": true
     }
