--- a/store/blocks/global/screen/product.jsonc
+++ b/store/blocks/global/screen/product.jsonc
@@ -1,9 +1,9 @@
 {
   "store.product": {
     "children": [
-      "flex-layout.row#product-breadcrumb",
+      // "flex-layout.row#product-breadcrumb",
       "flex-layout.row#product-main",
-     "product-specification-group"
+      "product-specification-group"
       //  "shelf.relatedProducts"
     ]
   }
