--- a/store/blocks/global/screen/product.jsonc
+++ b/store/blocks/global/screen/product.jsonc
@@ -3,7 +3,8 @@
     "children": [
       // "flex-layout.row#product-breadcrumb",
       "flex-layout.row#product-main",
-      "product-specification-group"
+      "flex-layout.row#especificartion__pdp"
+      // "product-specification-group"
       //  "shelf.relatedProducts"
     ]
   }
