--- a/store/blocks/phone/components/home/header/main_mega-menu.jsonc
+++ b/store/blocks/phone/components/home/header/main_mega-menu.jsonc
@@ -1,55 +1,63 @@
 {
-    "drawer": {
-      "title": "Mobile Drawer",
-      "children": ["mega-menu#mobile"],
-      "blocks": ["drawer-header#my-drawer"]
-    },
-    "mega-menu#mobile": {
-      "title": "Mobile Mega Menu",
-      "props": {
-        "defaultDepartmentActive": "...",
-        "orientation": "vertical",
-        "openOnly": "vertical"
-      }
-    },
-    "drawer-header#my-drawer": {
-      "title": "Drawer Header",
-      "children": ["flex-layout.row#drawer-header"]
-    },
-    "flex-layout.row#drawer-header": {
-      "title": "Drawer Header Row",
-      "children": [
-        "flex-layout.col#mega-menu-go-back-btn",
-        "flex-layout.col#spacer",
-        "flex-layout.col#drawer-close-button"
-      ],
-      "props": {
-        "blockClass": "drawer-header",
-        "preventHorizontalStretch": true,
-        "preventVerticalStretch": true,
-        "preserveLayoutOnMobile": true,
-        "fullWidth": true
-      }
-    },
-    "flex-layout.col#drawer-close-button": {
-      "title": "Drawer Close Button Column",
-      "children": ["drawer-close-button"],
-      "props": {
-        "verticalAlign": "middle",
-        "horizontalAlign": "right"
-      }
-    },
-    "flex-layout.col#mega-menu-go-back-btn": {
-      "title": "Mega Menu Go Back Button Column",
-      "children": ["mega-menu-go-back-btn"],
-      "props": {
-        "verticalAlign": "middle",
-        "horizontalAlign": "left",
-        "paddingLeft": 4
-      }
-    },
-    "flex-layout.col#spacer": {
-      "title": "Spacer Column"
+  "drawer": {
+    "title": "Mobile Drawer",
+    "children": ["mega-menu#mobile"],
+    "blocks": ["drawer-header#my-drawer"]
+  },
+  "mega-menu#mobile": {
+    "title": "Mobile Mega Menu",
+    "props": {
+      "defaultDepartmentActive": "...",
+      "orientation": "vertical",
+      "openOnly": "vertical"
     }
+  },
+  "drawer-header#my-drawer": {
+    "title": "Drawer Header",
+    "children": ["flex-layout.row#drawer-header"]
+  },
+  "flex-layout.row#drawer-header": {
+    "title": "Drawer Header Row",
+    "children": [
+      // "flex-layout.col#mega-menu-go-back-btn",
+      "flex-layout.col#logo-desktop",
+      "rich-text#header__options--mega--menu--mobile",
+      "flex-layout.col#spacer"
+      // "flex-layout.col#drawer-close-button"
+    ],
+    "props": {
+      "blockClass": "drawer-header",
+      "preventHorizontalStretch": true,
+      "preventVerticalStretch": true,
+      "preserveLayoutOnMobile": true,
+      "fullWidth": true
+    }
+  },
+  "rich-text#header__options--mega--menu--mobile": {
+    "title": "header options mega menu mobile",
+    "props": {
+      "text": "ITGlobers+",
+      "blockClass": "header__options--mega--menu--mobile"
+    }
+  },
+  "flex-layout.col#drawer-close-button": {
+    "title": "Drawer Close Button Column",
+    "children": ["drawer-close-button"],
+    "props": {
+      "verticalAlign": "middle",
+      "horizontalAlign": "right"
+    }
+  },
+  "flex-layout.col#mega-menu-go-back-btn": {
+    "title": "Mega Menu Go Back Button Column",
+    "children": ["mega-menu-go-back-btn"],
+    "props": {
+      "verticalAlign": "middle",
+      "horizontalAlign": "left",
+      "paddingLeft": 4
+    }
+  },
+  "flex-layout.col#spacer": {
+    "title": "Spacer Column"
   }
-  
+}
